--- a/documentation/modules/ROOT/pages/reproduce-environment.adoc
+++ b/documentation/modules/ROOT/pages/reproduce-environment.adoc
@@ -91,7 +91,7 @@ spec:
         name: http
         protocol: HTTP
       hosts:
-        - "\*"
+        - "gateway-staging-project{USER_ID}.{APPS_HOSTNAME_SUFFIX}"
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -99,16 +99,11 @@ metadata:
   name: gateway
 spec:
   hosts:
-    - "*"
+    - "gateway-staging-project{USER_ID}.{APPS_HOSTNAME_SUFFIX}"
   gateways:
     - istio-gateway{USER_ID}
   http:
-    - match:
-        - uri:
-            prefix: /staging-project{USER_ID}/api
-      rewrite:
-        uri: "/api"
-      route:
+    - route:
         - destination:
             port:
               number: 8080
@@ -120,7 +115,7 @@ Then use the new **OpenShift Route** in the Web Service `*by executing the follo
 
 [source,shell,subs="{markup-in-source}",role=copypaste]
 ----
-oc set env deployment/web COOLSTORE_GW_ENDPOINT=http://istio-ingressgateway-istio-system.{APPS_HOSTNAME_SUFFIX}/staging-project{USER_ID} -n staging-project{USER_ID}
+oc set env deployment/web COOLSTORE_GW_ENDPOINT=http://gateway-staging-project{USER_ID}.{APPS_HOSTNAME_SUFFIX} -n staging-project{USER_ID}
 ----
 
 == Testing the application
